resources/uploadWizard.css
/* ... */
#upload-wizard .ui-corner-br { -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
#upload-wizard .ui-corner-top { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; }
#upload-wizard .ui-corner-bottom { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
#upload-wizard .ui-corner-right {  -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
#upload-wizard .ui-corner-left { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; }
#upload-wizard .ui-corner-all { -moz-border-radius: 4px; -webkit-border-radius: 4px; }

.mwe-upwiz-deed-license-group-subhead {
	color: #797979;
	margin-top: 0em;
	margin-bottom: 0em;
}

.ui-dialog .mwe-upwiz-lightbox {
	padding: 0;
}

.mwe-upwiz-details-texts {
	padding: 0.5em;
}

.mwe-location-lat {
	float:left;
	font-style:italic;
}

.mwe-location-lon {
	float:left;
	font-style:italic;
}

.mwe-location-alt {
	font-style:italic;
}

.mwe-upwiz-category-will-be-added {
	font-style:italic;
	color:gray;
}

